# chok-ai-backend

./: .env.example  .gitignore  .gitignore.example  AGENTS.md  CLAUDE.md  README.md  clusters.json  langgraph.json  pyproject.toml
.agents/: API.md  APIGuide.md  API_notion_ver.md  ArchetectureGuide.md  ArchitectureGuide.md  ModelDesign.md  build_plan.md  git_convention.md  implementation_plan.md  llm_context_plan.md  step3_tools.md  step4_agent.md  step4_graph.md
app/: README.md  main.py  middleware.py
app/agents/: README.md  agent_tools.py  diagnosis_agent.py  graph.py
app/api/: README.md  router.py
app/core/: README.md  config.py  errors.py  logging.py  middleware.py
app/data/: README.md  patterns.py  templates.py
app/schemas/: README.md  analysis.py
app/services/: README.md  analysis_service.py
app/tools/: README.md
docs/changes/: 2026-06-26-bgl-tag-simplify-and-gpt5.md
tests/: README.md  TEST_CASES.csv  test_analyze.py  test_health.py
tests/BGL/: BGL_2k.log_fatal.csv  event_template.json
tests/anomaly_classifier/: ACCURACY_REPORT.md  SCENARIO_REPORT.md  test_anomaly_classifier.py  test_anomaly_classifier_accuracy.py  test_anomaly_classifier_scenarios.py
tests/cluster/: test_cluster.py  test_cluster_bgl_2k.py
tests/event_template/: SCENARIO_REPORT.md  test_event_template.py  test_event_template_accuracy.py  test_event_template_scenarios.py
tests/integration/: pipeline_input.json  pipeline_output.json
tests/node_info/: SCENARIO_REPORT.md  test_node_info_scenarios.py
tests/pipeline_scenarios/: SCENARIO_REPORT.md  (+1 more)
(+13 files in other folders)
