[project]
name = "chok-ai-backend"
version = "0.1.0"
description = "FastAPI AI analysis backend skeleton for the log analysis automation system."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",

    # Reference project dependencies to bring in later as analysis features are implemented:
    # "python-dotenv>=1.0.1",
    # "langchain>=0.3.0",
    # "langchain-openai>=0.2.0",
    # "langchain-community>=0.3.0",
    # "langchain-text-splitters>=0.3.0",
    # "langchain-chroma>=0.1.4",
    # "chromadb>=0.5.0",
    # "pypdf>=5.0.0",
    # "python-multipart>=0.0.9",
    # "crewai>=0.86.0",
    # "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "httpx2>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
